# rockbox

./: .claudeignore  .gitattributes  .gitignore  .gitreview  CLAUDE.md  Makefile  REKORDBOX.md  TODO.md  committers.diff  groups  junk.c  project.config  rockbox.desktop  shotgen.sh
utils/: CMakeLists.txt  FILES  parse_testcodec.pl  parse_testcodec.rb
utils/MTP/: Makefile  beastdump.c  sendfirm.c  sendfirm_win.c
utils/analysis/: bloat-o-meter.py  check_defines.sh  cmp-plugins-size.py  find_addr.pl  objdiff.py
utils/bflt/: elf2flt_rb.diff
utils/bootchart/: gnuplot.sh
utils/bspatch/: Makefile  bspatch.c  main.c
utils/bzip2/: Makefile
utils/chinachippatcher/: Makefile  chinachip.c  chinachip.h  main.c
utils/cmake/: QtTest.cmake  QtTestAddTests.cmake  deploy.cmake  download.cmake  gitversion.cmake
utils/common/: deploy-rbutil.py  deploy-themeeditor.py  deploy.py  gitscraper.py  tarball-rbutil.py  tarball.py
utils/e200rpatcher/: e200rpatcher.c  e200rpatcher.manifest
utils/e200tool/: Makefile  e200load.c  mi4code.c
utils/editors/: rockbox-style.el  sample.emacs  wps.vim
utils/elfloader/: Makefile  elf.h  elfload.c  elfload.h  main.c  symbols.h
utils/fiio_m3k_tools/: nand_patcher.py
utils/hwpatcher/: Makefile  Makefile.patch  arm.lua  creative.lua  fiio.lua  fuzep.lua  fuzep_rb.lua  generic_stmp.lua  hwpatcher.c  lib.lua  mips.lua  patch.S  rkwpatch.lua  view.lua  zxfi2.lua  zxfi3.lua
utils/hwstub/: hwemul_protocol.h  hwstub_protocol.h
utils/imx_hid_recovery/: Makefile  imx_hid_recovery.c
utils/imxtools/: aes128.c  crc.c  dbparser.c  elf.c  elftosb.c  misc.c  misc.h  sb.c  sb.h  sbloader.c  sbtoelf.c
utils/ingenic_tools/: Makefile  usbboot.c
utils/ipodpatcher/: Makefile  fat32format.c  ipodio-posix.c  ipodio-win32-scsi.c  ipodio-win32.c  ipodio.h  ipodpatcher-aupd.c  ipodpatcher.c  ipodpatcher.h  main.c
utils/jz4740_tools/: DLanalyser.c  HXF2IHFS.c  HXFmerge.c  HXFreplace.c  HXFsplit.c  IHFSsplit.c  Makefile  README  jz4740.h  jz4740_usbtool.c
utils/jz4740_usbtool/: Makefile  jz4740_usbtool.c
utils/jz4760_tools/: Makefile  packtools.cpp  usbboot.c
utils/jztool/: jztool.c
utils/meizu_dfu/: Makefile  README  meizu_dfu.c
utils/mkamsboot/: .gitignore  Makefile  dualboot.c  dualboot.h  main.c  mkamsboot.c  mkamsboot.h
utils/mkimxboot/: dualboot.h  main.c  mkimxboot.c  mkimxboot.h
utils/mkmpioboot/: main.c  mkmpioboot.c  mkmpioboot.h
utils/mknwzboot/: install_script.sh  main.c  mknwzboot.c  mknwzboot.h
utils/mkrk27boot/: Makefile  ata-sim.c  autoconf.h  main.c  mkrk27boot.c  mkrk27boot.h
utils/mks5lboot/: README  ipoddfu.c  main.c  mkdfu.c  mks5lboot.h
utils/mktccboot/: Makefile  README  main.c  mktccboot.c  mktccboot.h
utils/mkzenboot/: dualboot.h  main.c  mkzenboot.c  mkzenboot.h  utils.c  utils.h
utils/newparser/: Makefile  cabbiev2.220x176x16.wps  handle_tags.c  newparser.c  skin_render.c  skin_structs.h
utils/rbpms/: librbpms.py  rbpms.py
utils/rbutilqt/: CMakeLists.txt  INSTALL  Info.plist  Makefile.libs  RockboxUtility.desktop  aboutbox.ui  changelog.txt  configure.cpp  configure.h  configurefrm.ui  createvoicefrm.ui  createvoicewindow.cpp  createvoicewindow.h  dmgbuild.cfg  encttscfggui.cpp  encttscfggui.h  installtalkwindow.cpp  installtalkwindow.h  langstats.py  main.cpp  preview.cpp  preview.h  progressloggerfrm.ui  progressloggergui.cpp  progressloggergui.h  rbutil.ini  rbutilqt.cpp  rbutilqt.h  rbutilqt.pri  rbutilqt.pro  rbutilqt.qrc  rbutilqt.rc  rbutilqtfrm.ui  sysinfo.cpp  sysinfo.h  themesinstallfrm.ui  themesinstallwindow.cpp  themesinstallwindow.h  uninstallfrm.ui  uninstallwindow.cpp  (+2 more)
utils/reggen-ng/: arm-cortex-m7.reggen  reggen-ng.py  stm32h743.reggen  x1000.reggen
utils/regtools/: Makefile  desc_parser.cpp  desc_parser.hpp  headergen.cpp  headergen_v1.cpp  headergen_v2.cpp  hwemulgen.cpp  regtool.cpp  swiss_knife.cpp  tester.cpp  tester_v1.cpp
utils/rk27utils/: README
utils/rockbox_api/: README  functions.php  gen_html.php  generate.php  index.tpl  layout.css  menu.tpl  section.tpl  update.php
utils/samsungtools/: Makefile  README.txt  fwcrypt.c  fwdecrypt.c  fwpack.sh  fwpatch.sh  fwunpack.sh  samsung.c  samsung.h
utils/sansapatcher/: Makefile  README  main.c  parttypes.h  sansaio-posix.c  sansaio-win32.c  sansaio.h  sansapatcher.c  sansapatcher.h  sansapatcher.pro
utils/sbinfo/: Makefile  aes128.c  aes128_impl.c  aes128_impl.h  elf.c  elf.h  sb.h  sbinfo.c  sha1.c
utils/sbtools/: Makefile  README  crc.c  crypto.h  dbparser.c  dbparser.h  elf.c  elf.h  elftosb.c  misc.c  misc.h  sb.c  sb.h  sbtoelf.c  sha1.c
utils/scsi/: Makefile  rbscsi.c  rbscsi.h
utils/skinupdater/: Makefile  skinupdater.c  tag_table.c  tag_table.h  updatetheme.pl
utils/squashfs-tools/: Makefile  mksquashfs.c  read_fs.c  unsquashfs.c
utils/stm32tools/: gdbinit  openocd.cfg
utils/tcctool/: Makefile  README  tcctool-windows.txt  tcctool.c
utils/themeeditor/: CMakeLists.txt  Info.plist  README  RockboxThemeEditor.desktop  addresourcedir.php  buildtargetdb.php  codeeditor.cpp  codeeditor.h  configdocument.cpp  configdocument.h  configdocument.ui  dmgbuild.cfg  editorwindow.cpp  editorwindow.h  editorwindow.ui  includetargets.pl  main.c  main.cpp  parsetreemodel.cpp  parsetreemodel.h  parsetreenode.cpp  parsetreenode.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  projectfiles.cpp  projectfiles.h  projectmodel.cpp  projectmodel.h  projectsettings.cpp  projectsettings.h  quazip  resources.qrc  skin_debug.c  skin_debug.h  skin_parser.c  skin_parser.h  skin_scan.c  skin_scan.h  skindocument.cpp  (+12 more)
utils/time-sync/: Makefile  README  ipod-scsi.c  time-sync.c
utils/tomcrypt/: Makefile  README.ROCKBOX
utils/tools/: Makefile
utils/wpseditor/: README  TODO  buildall.bat  buildall.sh  wpseditor.pro
utils/ypr0tools/: Makefile  MuonEncrypt  README  bin2c  bin2c.c  bmp2raw.c  cable_detect.c  common.c  common.h  convert_images.sh  extract_section.c  fwcrypt.c  fwdecrypt.c  pack-firmware.sh  patch-firmware.sh  rockbox.sh  samsung_ypr0.c  samsung_ypr0.h  si4709.7z  test.sh  unpack-firmware.sh
(+10605 files in other folders)
